discussion/kv_engine/130419/130419_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP MB-39815: Migrate DurabilityCompletionTask to folly Executors

Change-Id: Ia70a68f4d1551a3407c8bdbb56e91eb5f5f995e2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-10-22 14:41:14.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-22 14:49:07.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5229/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/benchmarks/defragmenter_bench.cc:48:17: warning: use std::make_unique instead [modernize-make-unique]
        vbucket.reset(new EPVBucket(
               ~^~~~~ ~~~~~~~~~~~~~~
                = std::make_unique<EPVBucket>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/benchmarks/item_compressor_bench.cc:47:17: warning: use std::make_unique instead [modernize-make-unique]
        vbucket.reset(new EPVBucket(
               ~^~~~~ ~~~~~~~~~~~~~~
                = std::make_unique<EPVBucket>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_types.h:71:13: warning: use "= default" to define a trivial destructor [modernize-use-equals-default]
    virtual ~SyncWriteNextExpiryIface(){};
            ^                          ~~
                                       = default;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_types.h:74:44: error: no member named "chrono" in namespace "std" [clang-diagnostic-error]
    virtual void updateNextExpiryTime(std::chrono::steady_clock::time_point){};
                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/durability_monitor_test.cc:20:10: error: "../mock/mock_sync_write_next_expiry.h" file not found [clang-diagnostic-error]
#include "../mock/mock_sync_write_next_expiry.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5229/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_types.h:74:44:
error: no member named "chrono" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5229/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27026/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_types.h:74:44:
error: no member named "chrono" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27026/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31301/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\ep_types.h(74): error C2039: "chrono": is not a member of "std" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31301/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5636/ : FAILURE

Compile error at [2020-10-22T14:46:23.288Z] ../kv_engine/engines/ep/tests/module_tests/durability_monitor_test.cc:20:10:
fatal error: "../mock/mock_sync_write_next_expiry.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5636/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6684/ : FAILURE

Compile error at [2020-10-22T14:45:04.521Z] ../kv_engine/engines/ep/src/ep_types.h:74:44:
error: "std::chrono" has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6684/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6565/ : FAILURE

Compile error at [2020-10-22T14:43:05.020Z] ../kv_engine/engines/ep/src/ep_types.h:74:44:
error: "std::chrono" has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6565/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6849/ : FAILURE

Compile error at [2020-10-22T14:48:17.249Z] ../kv_engine/engines/ep/src/ep_types.h:74:44:
error: no member named "chrono" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6849/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14492/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3758/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-01-15 16:42:24.000000000
Message: 
Set Work In Progress
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-01-15 16:52:50.000000000
Message: 
Patch Set 4:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32958/ : FAILURE

Compile error at ..\kv_engine\utilities\config_parser.cc(181): error C3861: "strcasecmp": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32958/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7182/ : FAILURE

Compile error at [2021-01-15T16:48:21.959Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1148:19:
error: no matching function for call to "compact"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7182/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8093/ : FAILURE

Compile error at [2021-01-15T16:50:33.270Z] ../kv_engine/engines/ep/src/ep_types.h:74:44:
error: ?std::chrono? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8093/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8218/ : FAILURE

Compile error at [2021-01-15T16:51:40.137Z] ../kv_engine/engines/ep/src/ep_types.h:74:44:
error: ?std::chrono? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8218/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8480/ : FAILURE

Compile error at [2021-01-15T16:51:41.239Z] ../kv_engine/engines/ep/src/ep_types.h:74:44:
error: no member named "chrono" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8480/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16031/ : FAILURE'
----------------------------------------------------------------------------------------------------------------------
